--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,16 @@
 *.tar.gz
 *.rar
 
+# node_modules
+package-lock.json
+node_modules/
+yarn-error.log
+
+# IntelliJ IDEA files
+.idea/
+/out
+*.iws
+*.iml
+*.ipr
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
